# rust_homework

./: .gitmodules
.github/workflows/: auto_release.yml  feishu_table_client.yml
ai-partner/: .gitignore  README.md  package.json  pnpm-lock.yaml  vite.config.ts
ai-partner/.cargo/: config.toml
ai-partner/.github/workflows/: release.yaml
ai-partner/docs/: README.md
ai-partner/src/: App.vue  main.ts  vite-env.d.ts
ai-partner/src-tauri/: Cargo.toml  tauri.conf.json
ai-partner/src-tauri/capabilities/: default.json  desktop.json
ai-partner/src-tauri/icons/: icon.icns
ai-partner/src-tauri/src/: lib.rs  main.rs
ai-partner/src-tauri/src/app/: hotkey.rs  interaction.rs  invoke.rs  mod.rs  model.rs  state.rs  window.rs
ai-partner/src-tauri/src/app/invoke/: chat.rs  mod.rs  operation.rs
ai-partner/src-tauri/src/model/: mod.rs  table.rs
ai-partner/src-tauri/src/store/: config.rs  db.rs  mod.rs  setting.rs
ai-partner/src/api/: db.ts
ai-partner/src/bus/: index.ts  listen.ts
ai-partner/src/layout/: Body.vue  Header.vue  index.vue
ai-partner/src/router/: index.ts  routes.ts
ai-partner/src/store/: index.ts
ai-partner/src/types/: index.ts  listener.ts  markdown.d.ts
ai-partner/src/utils/: index.ts  router.ts  theme.ts
ai-partner/src/views/: Chat.vue  Dialog.vue  Home.vue  Setting.vue
ai-paternal/: .gitignore  index.html  package.json  pnpm-lock.yaml  vite.config.ts
ai-paternal/src/: App.css  App.tsx  main.tsx  vite-env.d.ts
ai-paternal/src-tauri/: Cargo.toml  config.example.yaml  config.toml  tauri.conf.json
ai-paternal/src-tauri/capabilities/: default.json  desktop.json
ai-paternal/src-tauri/src/: config.yaml  lib.rs  main.rs
ai-paternal/src/api/: db.ts
ai-paternal/src/components/: BotIcon.tsx  ChatForm.tsx  ChatMessage.tsx
ai-paternal/src/router/: index.tsx
ai-paternal/src/types/: index.ts
ai-paternal/src/utils/: index.ts
auth-server/: Cargo.toml
auth-server/src/: controller.rs  lib.rs  main.rs  state.rs
auth-server/src/models/: query.rs
blog_os/: Cargo.toml
blog_os/src/: main.rs  vga_buffer.rs
feishu-table-client/: Cargo.toml
feishu-table-client/src/: fetch_data.rs
feishu_table_client/: Cargo.toml  README.md
feishu_table_client/src/: args_parse.rs  fetch_data.rs  lib.rs  main.rs
privatebookmark/: README.md  package.json  pnpm-lock.yaml  vite.config.ts
privatebookmark/src/: App.vue  main.ts
privatebookmark/src-tauri/: Cargo.toml  tauri.conf.json
privatebookmark/src-tauri/src/: lib.rs  main.rs
privatebookmark/src/api/: db.ts  type.ts
privatebookmark/src/components/: Greet.vue
privatebookmark/src/database/: db.ts
privatebookmark/src/router/: index.ts  (+1 more)
tree-rs/: Cargo.toml
tree-rs/src/: main.rs
(+37 files in other folders)
