[package]
name = "auth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
chrono ={ version = "*",features = ["serde"]}
serde ={ version = "*", features = ["derive"]}
tokio = { version = "1", features = ["full"] }
dotenv = {version = "*"}
sqlx ={ version = "0.5.10",features = [
    "postgres",
    "runtime-tokio-rustls",
    "macros",
    "chrono"
]}