[package]
name = "feishu_table_client"
version = "0.1.0"
edition = "2021"
default-run = "feishu_table_client"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.111"
sysinfo = "0.30.5"
