[package]
name = "ai-partner"
version = "0.1.41"
description = "A Tauri App"
authors = ["Yoake"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "ai_partner_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon" ] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-window-state = "2.0.0"
tauri-plugin-process = "2"
tauri-plugin-shell = "2"

reqwest = { version = "0.11", features = ["stream", "json"] }
tokio = { version = "^1.43.0", features = ["full"] }
tokio-macros = "~2.5.0"
tokio-util = "0.7.13"
futures = "0.3.30"
serde_yaml = "0.9.33"
once_cell = "1.13.0"
[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
